[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player.png" type="Texture" id=2]
[ext_resource path="res://jump.wav" type="AudioStream" id=3]
[ext_resource path="res://wall_jump.wav" type="AudioStream" id=4]
[ext_resource path="res://air_jump.wav" type="AudioStream" id=5]
[ext_resource path="res://death.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.75, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1.33 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Land"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.241484, 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 0.75 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.241484, 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1.33 ), Vector2( 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Land = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_right = 512
limit_bottom = 320
smoothing_enabled = true
smoothing_speed = 8.0

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="CoyoteWall" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="Buffer" type="Timer" parent="."]
wait_time = 0.1

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WallJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AirJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.068

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.097

[connection signal="timeout" from="DeathTimer" to="." method="_death_timeout"]
